update project tracker

--- a/project_tracker.html
+++ b/project_tracker.html
@@ -195,10 +195,7 @@ pre code {
 <h1>Package updates</h1>
 <p><em>High priority</em></p>
 <ul>
-<li>send user test “homework” assignment to Luke (KH)</li>
 <li>recruit people for user testing of package (KH/LM)</li>
-<li>add flag to not drop any outcomes (KH)</li>
-<li>fix MDES code for zero MDES (LM)</li>
 </ul>
 <p><em>Medium priority</em></p>
 <ul>
@@ -219,18 +216,17 @@ pre code {
 <li>error if user passes same parameter in twice into grid</li>
 <li>give user estimate of runtime for WY (MDES and SS will require extra work)</li>
 </ul></li>
-<li>small things
+<li>parallel processing
 <ul>
-<li>make sure user can’t pass in vector of numCovar (KH)</li>
+<li>make it work for WY</li>
 </ul></li>
 </ul>
 </div>
 <div id="validation" class="section level1">
 <h1>Validation</h1>
 <ul>
-<li>re-run non-WY validation with sided tests fixed (KH)</li>
+<li>figure out issues with validation results (KH)</li>
 <li>re-run WY validation (KH)</li>
-<li>render validation documents (KH)</li>
 <li>incorporate into appendix (KH)</li>
 </ul>
 </div>
