--- a/project_tracker.html
+++ b/project_tracker.html
@@ -177,18 +177,15 @@ pre code {
 <div id="manuscript" class="section level1">
 <h1>Manuscript</h1>
 <ul>
-<li>look into journal submission process (KH)</li>
-<li>check if JSS allows vignette to be published separately (KH)</li>
-<li>cover letter (LM)</li>
-<li>add plots to vignette (LM)</li>
+<li>pre-submission inquiry (LM)</li>
 <li>write abstract (KH or KP)</li>
-<li>prepare formatting for submission (KH)</li>
 <li>explanation of min power when numZero &gt; 0 (KP)</li>
 </ul>
 <p><em>Waiting</em></p>
 <ul>
+<li>prepare formatting for submission (KH)</li>
 <li>add appendices to main document (waiting on validation to finish KH)</li>
-<li>once manuscript is ready, move vignette into package (KH or LM)</li>
+<li>move vignette into package (KH or LM)</li>
 </ul>
 </div>
 <div id="package-updates" class="section level1">
@@ -225,9 +222,8 @@ pre code {
 <div id="validation" class="section level1">
 <h1>Validation</h1>
 <ul>
-<li>figure out issues with validation results (KH)</li>
+<li>figure out remaining issues with validation results (KH)</li>
 <li>re-run WY validation (KH)</li>
-<li>incorporate into appendix (KH)</li>
 </ul>
 </div>
 <div id="waiting" class="section level1">
