--- a/project_tracker.html
+++ b/project_tracker.html
@@ -167,7 +167,14 @@ pre code {
 </div>
 
 
-<p>Updated: Dec 22 by KH</p>
+<p>Updated: Dec 27 by KH</p>
+<div id="shiny-integration" class="section level1">
+<h1>Shiny integration</h1>
+<ul>
+<li>design to d_m, new MTP names</li>
+<li>parallel computing for WY</li>
+</ul>
+</div>
 <div id="r-package" class="section level1">
 <h1>R package</h1>
 <ul>
@@ -177,9 +184,8 @@ pre code {
 <div id="manuscript" class="section level1">
 <h1>Manuscript</h1>
 <ul>
+<li>add discussion of parallel computing for WY (KH)</li>
 <li>pre-submission inquiry (LM)</li>
-<li>write abstract (KH or KP)</li>
-<li>explanation of min power when numZero &gt; 0 (KP)</li>
 </ul>
 <p><em>Waiting</em></p>
 <ul>
@@ -190,10 +196,6 @@ pre code {
 </div>
 <div id="package-updates" class="section level1">
 <h1>Package updates</h1>
-<p><em>High priority</em></p>
-<ul>
-<li>recruit people for user testing of package (KH/LM)</li>
-</ul>
 <p><em>Medium priority</em></p>
 <ul>
 <li>write simulation correlation tool (KH)</li>
@@ -207,15 +209,9 @@ pre code {
 </ul></li>
 <li>error/other messaging (KH or LM)
 <ul>
-<li>tell user that mdes and sample size single scenario plots don’t make sense (KH)</li>
 <li>collect errors from grid and only print out unique errors</li>
 <li>better error messaging for flat power curves (both shiny and non-shiny)</li>
-<li>error if user passes same parameter in twice into grid</li>
 <li>give user estimate of runtime for WY (MDES and SS will require extra work)</li>
-</ul></li>
-<li>parallel processing
-<ul>
-<li>make it work for WY</li>
 </ul></li>
 </ul>
 </div>
@@ -224,12 +220,6 @@ pre code {
 <ul>
 <li>figure out remaining issues with validation results (KH)</li>
 <li>re-run WY validation (KH)</li>
-</ul>
-</div>
-<div id="waiting" class="section level1">
-<h1>Waiting</h1>
-<ul>
-<li>merge change from design to d_m, new MTP names</li>
 </ul>
 </div>
 <div id="stretch-goals" class="section level1">
