update project tracker

--- a/project_tracker.html
+++ b/project_tracker.html
@@ -167,30 +167,26 @@ pre code {
 </div>
 
 
-<p>Updated: Dec 27 by KH</p>
-<div id="shiny-integration" class="section level1">
-<h1>Shiny integration</h1>
-<ul>
-<li>design to d_m, new MTP names</li>
-<li>parallel computing for WY</li>
-</ul>
-</div>
+<p>Updated: Dec 28 by KH</p>
 <div id="r-package" class="section level1">
 <h1>R package</h1>
 <ul>
-<li>Silence ROxygen documentation for non-exported functions (Zarni?)</li>
+<li>Silence ROxygen documentation for non-exported functions (ZH? LM?)</li>
 </ul>
 </div>
 <div id="manuscript" class="section level1">
 <h1>Manuscript</h1>
 <ul>
+<li>rewrite abstract</li>
 <li>add discussion of parallel computing for WY (KH)</li>
-<li>pre-submission inquiry (LM)</li>
+<li>add discussion of shiny (KP)</li>
+<li>is it plagiarism to be too close to previous Porter paper?</li>
+<li>update appendix with validation (KH)</li>
+<li>explanation of min power when numZero &gt; 0 (KP and shiny)</li>
 </ul>
 <p><em>Waiting</em></p>
 <ul>
 <li>prepare formatting for submission (KH)</li>
-<li>add appendices to main document (waiting on validation to finish KH)</li>
 <li>move vignette into package (KH or LM)</li>
 </ul>
 </div>
@@ -199,26 +195,26 @@ pre code {
 <p><em>Medium priority</em></p>
 <ul>
 <li>write simulation correlation tool (KH)</li>
+<li>make plots prettier (KH or LM)</li>
 </ul>
 <p><em>Low priority</em></p>
 <ul>
 <li>plotting code (LM)
 <ul>
 <li>clean up and condense data wrangling</li>
-<li>make plots prettier</li>
 </ul></li>
-<li>error/other messaging (KH or LM)
+<li>messaging (KH or LM)
 <ul>
 <li>collect errors from grid and only print out unique errors</li>
 <li>better error messaging for flat power curves (both shiny and non-shiny)</li>
-<li>give user estimate of runtime for WY (MDES and SS will require extra work)</li>
+<li>give user estimate of runtime for WY for MDES and SS</li>
 </ul></li>
 </ul>
 </div>
 <div id="validation" class="section level1">
 <h1>Validation</h1>
 <ul>
-<li>figure out remaining issues with validation results (KH)</li>
+<li>remaining issues with validation results (KH)</li>
 <li>re-run WY validation (KH)</li>
 </ul>
 </div>
