improve convergence issues for WY

--- a/project_tracker.html
+++ b/project_tracker.html
@@ -177,10 +177,7 @@ pre code {
 <div id="manuscript" class="section level1">
 <h1>Manuscript</h1>
 <ul>
-<li>add discussion of shiny (KP)</li>
-<li>is it plagiarism to be too close to previous Porter paper?</li>
-<li>update appendix with validation (KH)</li>
-<li>explanation of min power when numZero &gt; 0 (KP and shiny)</li>
+<li>explanation of min power when numZero &gt; 0 (KP, shiny)</li>
 </ul>
 <p><em>Waiting</em></p>
 <ul>
@@ -193,14 +190,9 @@ pre code {
 <p><em>Medium priority</em></p>
 <ul>
 <li>write simulation correlation tool (KH)</li>
-<li>make plots prettier (KH or LM)</li>
 </ul>
 <p><em>Low priority</em></p>
 <ul>
-<li>plotting code (LM)
-<ul>
-<li>clean up and condense data wrangling</li>
-</ul></li>
 <li>messaging (KH or LM)
 <ul>
 <li>collect errors from grid and only print out unique errors</li>
