fix validation discrepancy

--- a/project_tracker.html
+++ b/project_tracker.html
@@ -203,7 +203,6 @@ pre code {
 <div id="validation" class="section level1">
 <h1>Validation</h1>
 <ul>
-<li>remaining issues with validation results (KH)</li>
 <li>re-run WY validation (KH)</li>
 </ul>
 </div>
@@ -214,7 +213,7 @@ pre code {
 <li>surface WY functions to user with good documentation (KH)</li>
 <li>tool that helps user build a block matrix of correlations based on a list of correlations between outcomes (KH)</li>
 <li>generate a data frame of reasonable defaults for shiny that produce 80% power</li>
-<li>additional designs: d2.2_m2rr, d3.3_2mff, d3.1_m3fc2rr, d2.2_m2cc with cluster robust standard errors</li>
+<li>additional designs: d2.2_m2rr, d3.3_m2ff, d3.1_m3fc2rr, d2.2_m2cc with cluster robust standard errors</li>
 <li>effect size calculator</li>
 <li>speed up everything</li>
 <li>binary outcomes</li>
