continue refining WY validation;

--- a/project_tracker.html
+++ b/project_tracker.html
@@ -178,6 +178,7 @@ pre code {
 <h1>Manuscript</h1>
 <ul>
 <li>explanation of min power when numZero &gt; 0 (KP, shiny)</li>
+<li>add reference to sample size vignette (KH)</li>
 </ul>
 <p><em>Waiting</em></p>
 <ul>
@@ -192,13 +193,6 @@ pre code {
 <li>write simulation correlation tool (KH)</li>
 </ul>
 <p><em>Low priority</em></p>
-<ul>
-<li>messaging (KH or LM)
-<ul>
-<li>collect errors from grid and only print out unique errors</li>
-<li>give user estimate of runtime for WY for MDES and SS</li>
-</ul></li>
-</ul>
 </div>
 <div id="validation" class="section level1">
 <h1>Validation</h1>
@@ -209,6 +203,11 @@ pre code {
 <div id="stretch-goals" class="section level1">
 <h1>Stretch goals</h1>
 <ul>
+<li>messaging (KH or LM)
+<ul>
+<li>collect errors from grid and only print out unique errors</li>
+<li>give user estimate of runtime for WY for MDES and SS</li>
+</ul></li>
 <li>vary multiple factors in plots (LM)</li>
 <li>surface WY functions to user with good documentation (KH)</li>
 <li>tool that helps user build a block matrix of correlations based on a list of correlations between outcomes (KH)</li>
@@ -218,18 +217,6 @@ pre code {
 <li>speed up everything</li>
 <li>binary outcomes</li>
 <li>discussion of Benjamini-Hochberg</li>
-</ul>
-</div>
-<div id="shiny-app" class="section level1">
-<h1>Shiny app</h1>
-<ul>
-<li>in separate document</li>
-</ul>
-</div>
-<div id="video" class="section level1">
-<h1>Video</h1>
-<ul>
-<li>review script</li>
 </ul>
 </div>
 
