update explanation for validation of d32 models

--- a/project_tracker.html
+++ b/project_tracker.html
@@ -167,7 +167,7 @@ pre code {
 </div>
 
 
-<p>Updated: Dec 28 by KH</p>
+<p>Updated: Dec 30 by KH</p>
 <div id="r-package" class="section level1">
 <h1>R package</h1>
 <ul>
@@ -178,7 +178,6 @@ pre code {
 <h1>Manuscript</h1>
 <ul>
 <li>explanation of min power when numZero &gt; 0 (KP, shiny)</li>
-<li>add reference to sample size vignette (KH)</li>
 </ul>
 <p><em>Waiting</em></p>
 <ul>
@@ -188,16 +187,14 @@ pre code {
 </div>
 <div id="package-updates" class="section level1">
 <h1>Package updates</h1>
-<p><em>Medium priority</em></p>
 <ul>
 <li>write simulation correlation tool (KH)</li>
 </ul>
-<p><em>Low priority</em></p>
 </div>
 <div id="validation" class="section level1">
 <h1>Validation</h1>
 <ul>
-<li>re-run WY validation (KH)</li>
+<li>WY validation finish run and writeup (KH in progress)</li>
 </ul>
 </div>
 <div id="stretch-goals" class="section level1">
